remoção de código duplicado